charon/tests/ui/unsupported/gat.out
thread 'rustc' panicked at /rustc/6b0f4b5ec3aa707ecaa78230722117324a4ce23c/compiler/rustc_type_ir/src/binder.rs:713:9:
type parameter `T/#1` (T/#1/1) out of range when instantiating, args=[Self/#0]
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting item `test_crate::ArraySize`.
 --> tests/ui/unsupported/gat.rs:5:1
  |
5 | trait ArraySize {
  | ^^^^^^^^^^^^^^^

error: Ignoring the following item due to an error: test_crate::ArraySize
 --> tests/ui/unsupported/gat.rs:5:1
  |
5 | trait ArraySize {
  | ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

[ERROR charon_driver:249] Compilation encountered 2 errors
Error: Charon driver exited with code 1
